[metadata]
name = pkilint
author = DigiCert, Inc.
version = file: VERSION.txt
author_email = corey.bonnell@digicert.com
url = https://github.com/digicert/pkilint
description = A framework for verifying PKI structures
long_description = file: README.md
license = MIT
platform = any
python_requires = '>=3.9'
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
zip_safe = True
packages = find:
install_requires =
    pyasn1
    pyasn1-alt-modules
    pyyaml
    cryptography
    iso3166
    validators
    python-dateutil
    publicsuffixlist

[options.extras_require]
dev = pytest

[options.entry_points]
console_scripts =
    lint_cabf_serverauth_cert = pkilint.bin.lint_cabf_serverauth_cert:main
    lint_crl = pkilint.bin.lint_crl:main
    lint_pkix_cert = pkilint.bin.lint_pkix_cert:main
    lint_pkix_signer_signee_cert_chain = pkilint.bin.lint_pkix_signer_signee_cert_chain:main
    lint_cabf_smime_cert = pkilint.bin.lint_cabf_smime_cert:main
    lint_ocsp_response = pkilint.bin.lint_ocsp_response:main
