[metadata]
name = pkilint
author = DigiCert, Inc.
version = file: VERSION.txt
author_email = corey.bonnell@digicert.com
url = https://github.com/digicert/pkilint
description = A framework for verifying PKI structures
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = True
packages = find:
python_requires = >=3.9
install_requires =
    pyasn1
    pyasn1-alt-modules >=0.4.3
    cryptography >=39
    iso3166
    validators
    python-dateutil
    publicsuffixlist
    python-iso639
    iso4217

[options.extras_require]
rest =
    fastapi
dev =
    pytest
    %(rest)s
    httpx <1

[options.entry_points]
console_scripts =
    lint_cabf_serverauth_cert = pkilint.bin.lint_cabf_serverauth_cert:main
    lint_crl = pkilint.bin.lint_crl:main
    lint_pkix_cert = pkilint.bin.lint_pkix_cert:main
    lint_pkix_signer_signee_cert_chain = pkilint.bin.lint_pkix_signer_signee_cert_chain:main
    lint_cabf_smime_cert = pkilint.bin.lint_cabf_smime_cert:main
    lint_ocsp_response = pkilint.bin.lint_ocsp_response:main
    lint_etsi_cert = pkilint.bin.lint_etsi_cert:main
